--- a/EjemploFormulario04.html
+++ b/EjemploFormulario04.html
@@ -4,7 +4,7 @@
     <title>Ejemplo de Formulario 3</title>
   </head>
   <body>
-    <h1>Ejercio de HTML. Formulario 4</h1>
+    <h1>Ejercicio de HTML. Formulario 4</h1>
     <form action="registro.php" method="get">
       <table>
         <caption><strong>Registro de peso</strong></caption>
